# whisper-flash

./: .gitignore  README.md  convert_to_stride8.py  experiment_id23.py  experiment_topology_verification.py  paper.tex  pyproject.toml  run_adaptive_mlx.py
colab/: batch_manifest.json  colab_adaptive_multipath.py  colab_eval_correction.py  colab_quantization.py  execute_colab.py  run_colab_batch.py  run_colab_e2e.py  run_colab_e2e.sh  run_colab_orchestrator.sh
experiments/: _p15_diag.py  benchmark_kv.py  benchmark_kv_cache.py  experiment_adaptive_multipath.py  experiment_adaptive_threshold.py  experiment_bottleneck_free.py  experiment_branching_probe.py  experiment_chunk_decoding.py  experiment_consistency_drafting.py  experiment_consistency_pca_fusion.py  experiment_continuous_drafting.py  experiment_continuous_moe.py  experiment_cross_attn_ablation.py  experiment_dynamic_contrastive.py  experiment_encoder_downsample.py  experiment_fixed_harness.py  experiment_harness_audit.py  experiment_hybrid_verification.py  experiment_kv_compression.py  experiment_logit_contrastive.py  experiment_low_rank.py  experiment_manifold_10way.py  experiment_manifold_curvature.py  experiment_mixed_precision.py  experiment_moe_drafting.py  experiment_multihead_drafting.py  experiment_multipath_semantic_gate.py  experiment_multipath_verification.py  experiment_multipath_verifier.py  experiment_multistep_rollout.py  experiment_ngram_speculation.py  experiment_p10_combined_stack.py  experiment_p11_ngram_cache.py  experiment_p12_encoder_compress.py  experiment_p13_batched_decoding.py  (+49 more)
(+39 files in other folders)
